--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "node-starter",
-  "private": true,
+  "name": "ais-stream-websocket",
+  "version": "1.0.0",
+  "description": "Node.js WebSocket connection to AISStream",
+  "main": "index.js",
+  "dependencies": {
+    "ws": "^8.5.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  }
+    "start": "node index.js"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
